<resources>
    <string name="autonomy">Autonomy</string>
    <string name="notification_channel_name">@string/app_name</string>
    <string name="get_better_dot">Get better.\nTogether.</string>
    <string name="we_protect_your_digital_rights">We protect your Digital Rights.</string>
    <string name="digital_rights">Digital Rights</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="today">Today</string>
    <string name="your_privacy_get_stronger">Your privacy gets stronger as more people join.</string>
    <string name="permission">Permission</string>
    <string name="location_data">Location data</string>
    <string name="your_current_location_will_be_used">Your data will be used to help improve your neighborhood’s health. Your own location will be kept private.</string>
    <string name="autonomy_requires_access_to_the_following">Autonomy requires access to the following:</string>
    <string name="done">Done</string>
    <string name="risk_level">Risk level</string>
    <string name="are_u_at_higher_risk">Are you at higher risk for severe illness?</string>
    <string name="yes_im_at_higher_risk">Yes, I’m at higher risk</string>
    <string name="higher_risk_individuals">Higher risk individuals often include:\n• People over age 65\n\nAnd any pre-existing medical conditions, such as:\n• High blood pressure (hypertension)\n• Cardiovascular disease\n• Diabetes\n• Chronic respiratory disease (such as lung disease or asthma)\n• Cancer\n• Obesity\n• Compromised immune system</string>
    <string name="no_im_not_at_higher_risk">No, I’m not at higher risk</string>
    <string name="error">Error</string>
    <string name="passcode_pin_required">Device PIN setup is required</string>
    <string name="fingerprint_required">Biometric authentication setup is required</string>
    <string name="your_authorization_is_required">Your authorization is required.</string>
    <string name="unexpected_error">Unexpected error has occurred. Please contact support team</string>
    <string name="contact_us">Contact us</string>
    <string name="update_available">Update Available</string>
    <string name="a_new_version_is_available">The Autonomy app on your device is out of date. Please update Spring to continue using it.</string>
    <string name="update_now">Update now</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="pls_check_your_connection">Please check your connection and try again.</string>
    <string name="please_authorize_arrow">Please authorize »</string>
    <string name="could_not_register_account">Could not register account. Please try again later.</string>
    <string name="how_r_u_right_now">How are you right now?</string>
    <string name="survey">Survey</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="i_have_symptoms">I have symptoms</string>
    <string name="let_us_if_u_r_currently">Let us if you are currently experiencing any of common symptoms.</string>
    <string name="i_need_assistance">I need assistance</string>
    <string name="let_people_in_your_local_community">Let people in your local community know that you need help</string>
    <string-array name="symptoms">
        <item>dry cough</item>
        <item>fever</item>
        <item>chills</item>
        <item>fatigue</item>
        <item>shortness of breath</item>
        <item>difficulty breathing</item>
        <item>loss of sense of taste or smell</item>
    </string-array>
    <string name="do_u_have_any_symptoms">Do you have any of the following symptoms?</string>
    <string name="assistance">Assistance</string>
    <string name="what_kind_of_assistance">What kind of assistance do you need?</string>
    <string name="access_to_food_and_water">Access to food or water</string>
    <string name="i_need_help_getting_food">I need help getting food and water.</string>
    <string name="access_to_medicine">Access to medicine</string>
    <string name="i_need_help_getting_medications">I need help getting essential medications.</string>
    <string name="transport_to_healthcare">Transport to healthcare</string>
    <string name="i_need_help_traveling_medical_care">I need help traveling to get medical care.</string>
    <string name="my_home_is_unsafe">My home is unsafe</string>
    <string name="i_need_help_traveling_safe_location">I need help traveling to a safe location.</string>
    <string name="what_exactly_do_u_need">What exactly do you need?</string>
    <string name="enter_description_if_desired_items">Enter description of desired items or destination here</string>
    <string name="where_is_safe_place_to_meet">Where is a safe place to meet your helper?</string>
    <string name="enter_physical_address_other_safe_location">Enter a physical address other safe location description here</string>
    <string name="how_should_your_helper_contact_u">How should your helper contact you?</string>
    <string name="enter_contact_info_here">Enter contact info here. For example, a Line ID, WhatsApp ID, or phone number.</string>
    <string name="please_review_your_request_help">Please review your request for assistance:</string>
    <string name="exact_needs">Exact Needs</string>
    <string name="meeting_location">Meeting Location</string>
    <string name="contact_info">Contact Info</string>
    <string name="submit">Submit</string>
    <string name="submitted">Submitted</string>
    <string name="your_request_for_assistance_broadcast">Your request for assistance has been broadcast to your LOCAL community</string>
    <string name="you_will_receive_notification">You will receive a notification when someone has volunteered to help.</string>
    <string name="got_it">Got it</string>
    <string name="review">Review</string>
    <string name="need_access_food">Need access to food or water</string>
    <string name="need_access_medicine">Need access to medicine</string>
    <string name="need_transport_healthcare">Need transport to healthcare</string>
    <string name="need_traveling_to_safe_location">Need transport from an unsafe home</string>
    <string name="could_not_broadcast_your_request">Could not broadcast your request. Please try again later.</string>
    <string name="request">Request</string>
    <string name="sign_up">Sign up</string>
    <string name="you_are_currently_signed_up">You are currently signed up to fulfill this community request. If you are unable to complete it, please contact the community member to let them know.</string>
    <string name="could_not_sign_up_request">Could not sign up request. Please try again later.</string>
    <string name="signed_up">Signed up</string>
    <string name="thank_u_for_signing_up">Thank you for signing up to fulfill this community request</string>
    <string name="the_community_member_in_need">The community member in need has been notified of your response. Please write down or take a screenshot of the request details now then contact the community member.</string>
    <string name="copied">Copied</string>
    <string name="could_not_report_symptoms">Could not report your symptoms. Please try again later.</string>
    <string name="access_to_location_required">Access to Location Required</string>
    <string name="autonomy_requires_access_to_your_location">Autonomy requires access to your location to use the app. We will only use this data in calculating statistics for a general location and will never reveal any personally identifiable information about you.</string>
    <string name="some_one_has_signed_up_requester">Someone has signed up to fulfill your community request. Please wait for time to contact you.</string>
    <string name="some_one_has_signed_up_visitor">Someone has already signed up to fulfill this community request.</string>
    <string name="could_not_open_google_map">Could not open Google maps</string>
    <string name="just_now">Just now</string>
    <string name="check_in_survey">Check-in survey</string>
    <string name="how_r_u_right_now_tap_to_check_in">How are you right now? Tap to check in.</string>
    <string name="only_one_help_request_allowed">Only One Help Request Allowed</string>
    <string name="sorry_u_already_have_a_outstanding_help_request">Sorry, but you already have an outstanding help request to your community. Currently, our system only supports one request at a time for each community member.</string>
    <string name="someone_just_signed_up">Someone Just Signed Up</string>
    <string name="thanks_so_much_for_your_eagerness">Thanks so much for your eagerness to help out, but another community member just signed up for this request.</string>
    <string name="confirmed_cases">Confirmed infections</string>
    <string name="reported_symptoms">Symptoms</string>
    <string name="healthy_behaviors">Healthy behaviors</string>
    <string name="population_density">Population density</string>
    <string name="your_symptoms_have_been_reported">Your symptoms have been successfully reported to your community</string>
    <string name="thanks_for_taking_the_time_symptoms">Thanks for taking the time to make your community a healthier and happier place. Please continue to report your symptoms if they continue.</string>
    <string name="behaviors">Behaviors</string>
    <string name="reported">Reported</string>
    <string name="your_behaviors_have_been_reported">Your behaviors have been successfully reported to your community</string>
    <string name="thanks_for_taking_the_time_behaviors">Thanks for taking the time to make your community a healthier and happier place. Please continue to report your behaviors if they continue.</string>
    <string name="could_not_report_behaviors">Could not report your behaviors. Please try again later.</string>
    <string name="did_u_do_any_behaviors">Did you do any of the following behaviors today?</string>
    <string name="frequent_hand_cleaning">Frequent hand cleaning</string>
    <string name="washing_hands_thoroughly">Washing hands thoroughly with soap and water for at least 20 seconds or applying an alcohol-based hand sanitizer.</string>
    <string name="social_physical_distancing">Social &amp; physical distancing</string>
    <string name="avoiding_crowds_work_from_home">Avoiding crowds, working from home, and maintaining at least 6 feet of distance from others whenever possible.</string>
    <string name="body_temp">Body temperature above 100ºF (38ºC)</string>
    <string name="without_mucous">Without mucous or phlegm (rattling)</string>
    <string name="add_new_location">Add new location …</string>
    <string name="could_not_rename_area">Could not rename the area. Please try again later.</string>
    <string name="could_not_delete_area">Could not delete the area. Please try again later.</string>
    <string name="could_not_add_area">Could not add new area. Please try again later.</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="yesterday">Yesterday</string>
    <string name="reset">Reset</string>
    <string name="add_symptom">Add symptom …</string>
    <string name="create_title_for_symptom">Create a title for your symptom:</string>
    <string name="enter_your_title_here">Enter your title here …</string>
    <string name="you_can_add_des_for_symptom">You can add a short description for your symptom (optional):</string>
    <string name="enter_your_optional_des_here">Enter your optional description here …</string>
    <string name="your_symptom_has_been_added">Your symptom has been successfully added to your community’s list of symptoms</string>
    <string name="check_key">Check key</string>
    <string name="try_again">Try again</string>
</resources>