<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_18"
    android:paddingTop="@dimen/dp_14"
    android:paddingEnd="@dimen/dp_18"
    android:paddingBottom="@dimen/dp_14">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/assistance"
        android:textAllCaps="true"
        android:textColor="@color/silver_2"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/dp_124"
        android:layout_height="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:background="@drawable/ic_double_line"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <View
        android:layout_width="@dimen/dp_124"
        android:layout_height="@dimen/dp_3"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@drawable/ic_double_line"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSlogan"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/what_kind_of_assistance"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <View
        android:id="@+id/vDivider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/concord"
        app:layout_constraintEnd_toEndOf="@id/tvSlogan"
        app:layout_constraintStart_toStartOf="@id/tvSlogan"
        app:layout_constraintTop_toBottomOf="@id/tvSlogan" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/dp_8"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/access_to_food_and_water"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/ivFood"
        app:layout_constraintStart_toStartOf="@id/vDivider1"
        app:layout_constraintTop_toBottomOf="@id/vDivider1" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFoodDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/i_need_help_getting_food"
        android:textColor="@color/silver_chalice"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvFood"
        app:layout_constraintStart_toStartOf="@id/tvFood"
        app:layout_constraintTop_toBottomOf="@id/tvFood" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFood"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/tvFoodDes"
        app:layout_constraintEnd_toEndOf="@id/vDivider1"
        app:layout_constraintTop_toTopOf="@id/tvFood"
        app:srcCompat="@drawable/ic_next_stateful" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMedicine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_8"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/access_to_medicine"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/ivMedicine"
        app:layout_constraintStart_toStartOf="@id/vDivider1"
        app:layout_constraintTop_toBottomOf="@id/tvFoodDes" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMedicineDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/i_need_help_getting_medications"
        android:textColor="@color/silver_chalice"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvMedicine"
        app:layout_constraintStart_toStartOf="@id/tvMedicine"
        app:layout_constraintTop_toBottomOf="@id/tvMedicine" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMedicine"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/tvMedicineDes"
        app:layout_constraintEnd_toEndOf="@id/vDivider1"
        app:layout_constraintTop_toTopOf="@id/tvMedicine"
        app:srcCompat="@drawable/ic_next_stateful" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMedicalCare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_8"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/transport_to_healthcare"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/ivMedicalCare"
        app:layout_constraintStart_toStartOf="@id/vDivider1"
        app:layout_constraintTop_toBottomOf="@id/tvMedicineDes" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMedicalCareDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/i_need_help_traveling_medical_care"
        android:textColor="@color/silver_chalice"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvMedicalCare"
        app:layout_constraintStart_toStartOf="@id/tvMedicalCare"
        app:layout_constraintTop_toBottomOf="@id/tvMedicalCare" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMedicalCare"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/tvMedicalCareDes"
        app:layout_constraintEnd_toEndOf="@id/vDivider1"
        app:layout_constraintTop_toTopOf="@id/tvMedicalCare"
        app:srcCompat="@drawable/ic_next_stateful" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTravelSafeLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_8"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/my_home_is_unsafe"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/ivMedicalCare"
        app:layout_constraintStart_toStartOf="@id/vDivider1"
        app:layout_constraintTop_toBottomOf="@id/tvMedicalCareDes" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTravelSafeLocationDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/i_need_help_traveling_safe_location"
        android:textColor="@color/silver_chalice"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvTravelSafeLocation"
        app:layout_constraintStart_toStartOf="@id/tvTravelSafeLocation"
        app:layout_constraintTop_toBottomOf="@id/tvTravelSafeLocation" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTravelSafeLocation"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/tvTravelSafeLocationDes"
        app:layout_constraintEnd_toEndOf="@id/vDivider1"
        app:layout_constraintTop_toTopOf="@id/tvTravelSafeLocation"
        app:srcCompat="@drawable/ic_next_stateful" />

</androidx.constraintlayout.widget.ConstraintLayout>