<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mine_shaft_2"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/dp_105"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domaine_sans"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/silver_2"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/submitted" />

    <View
        android:id="@+id/vToolbar1"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:background="@drawable/ic_double_line"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toStartOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        tools:visibility="visible" />

    <View
        android:id="@+id/vToolbar2"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_3"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@drawable/ic_double_line"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMsg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="@font/domaine_sans"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/your_request_for_assistance_broadcast" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMsg1"
        tools:text="@string/you_will_receive_notification" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMsg2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNegative"
            android:layout_width="@dimen/dp_166"
            android:layout_height="wrap_content"
            android:fontFamily="@font/domaine_sans"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textAllCaps="true"
            android:textColor="@color/color_white_stateful"
            android:textSize="@dimen/sp_18"
            tools:text="@string/check_key" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPositive"
            android:layout_width="@dimen/dp_166"
            android:layout_height="wrap_content"
            android:fontFamily="@font/domaine_sans"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textAllCaps="true"
            android:textColor="@color/color_white_stateful"
            android:textSize="@dimen/sp_18"
            tools:text="@string/try_again" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
