<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_18"
    android:paddingTop="@dimen/dp_14"
    android:paddingEnd="@dimen/dp_18"
    android:paddingBottom="@dimen/dp_14">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/survey"
        android:textAllCaps="true"
        android:textColor="@color/silver_2"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/dp_124"
        android:layout_height="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:background="@drawable/ic_double_line"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <View
        android:layout_width="@dimen/dp_124"
        android:layout_height="@dimen/dp_3"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@drawable/ic_double_line"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSlogan"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/how_can_we_help"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <View
        android:id="@+id/vDivider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/concord"
        app:layout_constraintEnd_toEndOf="@id/tvSlogan"
        app:layout_constraintStart_toStartOf="@id/tvSlogan"
        app:layout_constraintTop_toBottomOf="@id/tvSlogan" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSymptom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/i_have_symptoms"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/ivSymptom"
        app:layout_constraintStart_toStartOf="@id/vDivider1"
        app:layout_constraintTop_toBottomOf="@id/vDivider1" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSymptomDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/let_us_if_u_r_currently"
        android:textColor="@color/silver_chalice"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvSymptom"
        app:layout_constraintStart_toStartOf="@id/tvSymptom"
        app:layout_constraintTop_toBottomOf="@id/tvSymptom" />

    <com.bitmark.autonomy.util.view.TouchableOpacityAppCompatImageView
        android:id="@+id/ivSymptom"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/tvSymptom"
        app:layout_constraintEnd_toEndOf="@id/vDivider1"
        app:layout_constraintTop_toTopOf="@id/tvSymptom"
        app:srcCompat="@drawable/ic_next_stateful" />

    <View
        android:id="@+id/vDivider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/concord"
        app:layout_constraintEnd_toEndOf="@id/ivSymptom"
        app:layout_constraintStart_toStartOf="@id/tvSymptomDes"
        app:layout_constraintTop_toBottomOf="@id/tvSymptomDes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAssistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/i_need_assistance"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/ivSymptom"
        app:layout_constraintStart_toStartOf="@id/vDivider2"
        app:layout_constraintTop_toBottomOf="@id/vDivider2" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAssistanceDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/let_people_in_your_local_community"
        android:textColor="@color/silver_chalice"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tvAssistance"
        app:layout_constraintStart_toStartOf="@id/tvAssistance"
        app:layout_constraintTop_toBottomOf="@id/tvAssistance" />

    <com.bitmark.autonomy.util.view.TouchableOpacityAppCompatImageView
        android:id="@+id/ivAssistance"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/tvAssistance"
        app:layout_constraintEnd_toEndOf="@id/vDivider1"
        app:layout_constraintTop_toTopOf="@id/tvAssistance"
        app:srcCompat="@drawable/ic_next_stateful" />


</androidx.constraintlayout.widget.ConstraintLayout>